# practice

./: README.md  Rakumachi_scraping.ipynb  compare_Nov17_Mar18.ipynb
R/: ch10.R  (+17 more)
timeseries/: pyproject.toml
timeseries/elec/: 0.get_electoric_power_record.ipynb  1.tables.ipynb  1_1.temperature_table.ipynb  1_2.gdp_table.ipynb  2.overview.ipynb  3.seasonality.ipynb  4.compare_previour_year.ipynb  4.compare_previour_year_daily.ipynb  4.compare_previour_year_dayofweek.ipynb  5.prophet_daily.ipynb  6.lgbm_daily.ipynb  6.lgbm_daily_lag1d.ipynb  6.lgbm_daily_lag2d.ipynb  check_seasonality.ipynb  get_electoric_power_record.ipynb  prophet_daily.ipynb  prophet_weekly.ipynb  pykalman_weekly.ipynb  pystan_test.ipynb  pystan_weekly.ipynb  statsmodels_daily.ipynb  statsmodels_weekly.ipynb  utils.py  x5.prophet_daily.ipynb  ｘ1_1.temperature_table.ipynb  ｘ5.prophet_daily_lag2d.ipynb  ｘ5.prophet_weekly.ipynb
timeseries/practice/: statsmodels.ipynb
timeseries/stock/: autocorrelation.ipynb  basic_statistics.ipynb  get_share_data.ipynb  shares.ipynb
timeseries/ts_workshop/: 00.get_electoric_power_record.ipynb  01.tables.ipynb  02.overview.ipynb  03.seasonality.ipynb  04.compare_previour_year_daily.ipynb  05.prophet_daily.ipynb  06.lgbm_daily.ipynb  10.preprocess.ipynb  11.seasonality.ipynb  12.prophet.ipynb  13.lgbm.ipynb
timeseries/well/: 1.preprocess.ipynb  10.preprocess.ipynb  11.seasonality.ipynb  12.prophet.ipynb  13.lgbm.ipynb  2.prophet.ipynb  2.seasonality.ipynb  3.lgbm.ipynb  Untitled.ipynb  x1.overview.ipynb
trade/: pyproject.toml
trade/fx/: USDJPY_data.ipynb  combined_time_scale.ipynb  exec.py  lstm-ohlc-diff-target_window.ipynb  lstm-ohlc-diff.ipynb  lstm-ohlc.ipynb  lstm.ipynb  oanda_api.ipynb  oanda_api_candle.ipynb  oanda_optuna.ipynb  oanda_prophet.ipynb  oanda_utils.py  sample_oanda.ipynb  sample_prophet.ipynb
trade/fx/my_oanda/: __init__.py  my_oanda.py  oanda_utils.py
trade/fx/notebooks/: Untitled.ipynb  combined_time_scale.ipynb  cross_validation.ipynb  dev.ipynb  dev_preprocess.ipynb  economic_figures.ipynb  eda_economic_indicators.ipynb  lstm-ohlc-diff.ipynb  lstm.ipynb  oanda_api_candle.ipynb  (+4 more)
(+449 files in other folders)
