[tool.poetry]
name = "timeseries"
version = "0.1.0"
description = ""
authors = ["Rio114 <nomuraryoji114@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
statsmodels = "^0.12.2"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
