[tool.poetry]
name = "trade"
version = "0.1.0"
description = ""
authors = ["rnomura"]

[tool.poetry.dependencies]
python = "^3.8"
fbprophet = "^0.7.1"
jupyterlab = "^3.0.7"
plotly = "^4.14.3"
ipywidgets = "^7.6.3"
jupyter = "^1.0.0"
jupyterlab-widgets = "^1.0.0"
oandapyV20 = "^0.6.3"
tensorflow = "^2.4.1"
sklearn = "^0.0"
scipy = "^1.6.0"
optuna = "^2.5.0"
APScheduler = "^3.7.0"
slack-webhook = "^1.0.5"
linenotipy = "^1.0.3"
discordwebhook = "^1.0.1"
luigi = "^3.0.2"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
